<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/money_description_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/money_date_entrance"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:gravity="center|center_horizontal"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/money_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/money_description"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:gravity="center|start"
            android:text="@string/body"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/money_date_entrance"
            app:layout_constraintStart_toEndOf="@+id/money_date_entrance" />

        <TextView
            android:id="@+id/money_value"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:clickable="false"
            android:gravity="center|start"
            android:hint="@string/money_symbol"
            android:importantForAutofill="no"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/money_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/money_description" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>